--- a/SinglePage/static/css/style.css
+++ b/SinglePage/static/css/style.css
@@ -111,10 +111,10 @@ h1.likert-header {
 .radiobtn label {
     display: block;
     background:none;
-    color:#01a7e1;
+    color:#007ae6;
     border-radius: 5px;
     padding: 10px 20px;
-    border: 2px solid #01a7e1;
+    border: 2px solid #007ae6;
     margin-bottom: 5px;
     cursor: pointer;
     font-family:Arial, Helvetica, sans-serif;
@@ -126,6 +126,6 @@ h1.likert-header {
     appearance: none;
 }
 .radiobtn input[type="radio"]:checked + label {
-    background:#01a7e1;
+    background:#007ae6;
     color:#fff;
 }
