--- a/SinglePage/static/css/style.css
+++ b/SinglePage/static/css/style.css
@@ -32,6 +32,11 @@ footer {
     background-color: #004B8B;
 }
 
+.container > img {
+  max-width: 50%;
+  max-height: 50%;
+}
+
 /*Progressbar*/
 .progress{
     border-radius: 0rem;
