Add framing, add IMI questions, adapt style

--- a/SinglePage/templates/cards/personal_info.html
+++ b/SinglePage/templates/cards/personal_info.html
@@ -1,5 +1,5 @@
 <div class="card-header text-white">
-           Personal information
+           Personal Information
 </div>
 <div class="progress">
     <div class="progress-bar" role="progressbar" aria-valuenow="0"
