--- a/SinglePage/templates/cards/questionnaire.html
+++ b/SinglePage/templates/cards/questionnaire.html
@@ -1,5 +1,5 @@
 <div class="card-header text-white">
-            End
+           Questionnaires
 </div>
 <div class="progress">
     <div class="progress-bar" role="progressbar" aria-valuenow="0"
@@ -9,12 +9,7 @@
 </div>
 <div class="card-body">
     <p class="card-text">
-        Thank you for your participation!
+       With the questions on the next two pages we would like to get your opinion on the previous tasks.
+       Please answer the questions as well as you can.
     </p>
-    <p class="card-text">
-        AUFKLÄRUNG ÜBER FRAMING
-        <br>
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-    </p>
-    <br>
 </div>
