--- a/SinglePage/templates/cards/start.html
+++ b/SinglePage/templates/cards/start.html
@@ -4,8 +4,11 @@
 <div class="card-body">
     <p class="card-text">
         <b>Participation information</b><br><br>
-        Thank you for participating in our study. In this study, we would like to investigate XYZ.
-        It will take around XYZ min.<br><br>
+        Thank you for participating in our study. In this study, we would like to measure cognitive ability of our participants
+        and how they feel about performing the tasks.
+        This study consists of two parts. In each you have to solve 8 Cognitive Ability Tasks, followed by a questionnaire.
+        It will take you around XYZ min.<br><br>
+
         Your data will be stored and processed anonymously only. More information on data protection can be
         found in the legal notice. This study is conducted by Julia Schulz as part of her master thesis
         at DFKI (German Research Center for Artificial Intelligence) and UdS (Saarland University). For
