--- a/SinglePage/static/css/style.css
+++ b/SinglePage/static/css/style.css
@@ -52,9 +52,9 @@ h1.likert-header {
 }
 .wrap .statement {
   display:block;
-  font-size: 14px;
+  /*font-size: 14px;*/
   font-weight: bold;
-  padding: 30px 0 0 4.25%;
+  padding: 30px 0 0 2%;
   margin-bottom:10px;
 }
 .wrap .likert {
@@ -70,15 +70,15 @@ h1.likert-header {
   content: '';
   position:relative;
   top:11px;
-  left:9.5%;
+  left:6.5%;
   display:block;
   background-color:#efefef;
   height:4px;
-  width:78%;
+  width:80%;
 }
 .wrap .likert li {
   display:inline-block;
-  width:19%;
+  width:13%;
   text-align:center;
   vertical-align: top;
 }
@@ -134,3 +134,8 @@ h1.likert-header {
     background:#007ae6;
     color:#fff;
 }
+
+.radiobtn label:hover {
+  background-color: #e6f3ff;
+}
+
