--- a/SinglePage/templates/cards/imi.html
+++ b/SinglePage/templates/cards/imi.html
@@ -13,120 +13,36 @@
     </p>
     <br>
     <div class="wrap">
-        <label class="statement">This HTML Likert scale is easy to use.</label>
-                <ul class='likert'>
-            <li>
-                <input type="radio" name="scale0" value="strong_agree">
-                <label>Strongly agree</label>
-            </li>
-            <li>
-                <input type="radio" name="scale0" value="agree">
-                <label>Agree</label>
-            </li>
-            <li>
-                <input type="radio" name="scale0" value="neutral">
-                <label>Neutral</label>
-            </li>
-            <li>
-                <input type="radio" name="scale0" value="disagree">
-                <label>Disagree</label>
-            </li>
-            <li>
-                <input type="radio" name="scale0" value="strong_disagree">
-                <label>Strongly disagree</label>
-            </li>
-        </ul>
-        <label class="statement">This HTML Likert scale is easy to use.</label>
+        {% for question in imi %}
+        <label class="statement">{{ question }}</label>
         <ul class='likert'>
             <li>
-                <input type="radio" name="scale1" value="strong_agree">
-                <label>Strongly agree</label>
+                <input type="radio" name="scale{{ forloop.counter0 }}" value="1">
+                <label>Not true at all</label>
             </li>
             <li>
-                <input type="radio" name="scale1" value="agree">
-                <label>Agree</label>
+                <input type="radio" name="scale{{ forloop.counter0 }}" value="2">
             </li>
             <li>
-                <input type="radio" name="scale1" value="neutral">
-                <label>Neutral</label>
+                <input type="radio" name="scale{{ forloop.counter0 }}" value="3">
             </li>
             <li>
-                <input type="radio" name="scale1" value="disagree">
-                <label>Disagree</label>
+                <input type="radio" name="scale{{ forloop.counter0 }}" value="4">
+                <label>Somewhat true</label>
             </li>
             <li>
-                <input type="radio" name="scale1" value="strong_disagree">
-                <label>Strongly disagree</label>
+                <input type="radio" name="scale{{ forloop.counter0 }}" value="5">
+            </li>
+            <li>
+                <input type="radio" name="scale{{ forloop.counter0 }}" value="6">
+            </li>
+            <li>
+                <input type="radio" name="scale{{ forloop.counter0 }}" value="7">
+                <label>Very true</label>
             </li>
         </ul>
-        <label class="statement">It's clear that this is a responsive design.</label>
-        <ul class='likert'>
-            <li>
-                <input type="radio" name="scale2" value="strong_agree">
-                <label>Strongly agree</label>
-            </li>
-            <li>
-                <input type="radio" name="scale2" value="agree">
-                <label>Agree</label>
-            </li>
-            <li>
-                <input type="radio" name="scale2" value="neutral">
-                <label>Neutral</label>
-            </li>
-            <li>
-                <input type="radio" name="scale2" value="disagree">
-                <label>Disagree</label>
-            </li>
-            <li>
-                <input type="radio" name="scale2" value="strong_disagree">
-                <label>Strongly disagree</label>
-            </li>
-        </ul>
-        <label class="statement">Codepen.io is an excellent tool for prototyping.</label>
-        <ul class='likert'>
-            <li>
-                <input type="radio" name="scale3" value="strong_agree">
-                <label>Strongly agree</label>
-            </li>
-            <li>
-                <input type="radio" name="scale3" value="agree">
-                <label>Agree</label>
-            </li>
-            <li>
-                <input type="radio" name="scale3" value="neutral">
-                <label>Neutral</label>
-            </li>
-            <li>
-                <input type="radio" name="scale3" value="disagree">
-                <label>Disagree</label>
-            </li>
-            <li>
-                <input type="radio" name="scale3" value="strong_disagree">
-                <label>Strongly disagree</label>
-            </li>
-        </ul>
-        <label class="statement">Pete Fecteau is incredibly smart and handsome.</label>
-        <ul class='likert'>
-            <li>
-                <input type="radio" name="scale4" value="strong_agree">
-                <label>Strongly agree</label>
-            </li>
-            <li>
-                <input type="radio" name="scale4" value="agree">
-                <label>Agree</label>
-            </li>
-            <li>
-                <input type="radio" name="scale4" value="neutral">
-                <label>Neutral</label>
-            </li>
-            <li>
-                <input type="radio" name="scale4" value="disagree">
-                <label>Disagree</label>
-            </li>
-            <li>
-                <input type="radio" name="scale4" value="strong_disagree">
-                <label>Strongly disagree</label>
-            </li>
-        </ul>
+        {% endfor %}
     </div>
 </div>
+
+
