Save personal info and meta info

--- a/SinglePage/templates/cards/personal_info.html
+++ b/SinglePage/templates/cards/personal_info.html
@@ -13,23 +13,23 @@
         <input type="number" min="0" step="1" id="age" name="age" class="form-control"  style="width: 200px">
         <hr>
         What is your nationality?
-        <input type="text" id="age" name="age" class="form-control" >
+        <input type="text" id="nationality" name="nationality" class="form-control" >
         <hr>
         With which gender do you identify yourself?
         <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioBtn" id="male">
+        <input class="form-check-input" type="radio" name="gender" id="male">
             <label class="form-check-label" for="male">
                 Male
             </label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="radioBtn" id="female">
+            <input class="form-check-input" type="radio" name="gender" id="female">
             <label class="form-check-label" for="female">
                 Female
             </label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="radioBtn" id="other">
+            <input class="form-check-input" type="radio" name="gender" id="other">
             <label class="form-check-label" for="other">
                 Other
             </label>
