Provide more data for questionnaires

--- a/SinglePage/templates/index.html
+++ b/SinglePage/templates/index.html
@@ -30,7 +30,7 @@
     <div class="card">
         {% include 'cards/questionnaire.html' %}
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="displayCards(); fillProgress(); saveQuestion('pre')"> Continue</a>
+            <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>
         </div>
     </div>
 </div>
@@ -47,7 +47,7 @@
     <div class="card">
         {% include 'cards/questionnaire.html' %}
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="displayCards(); fillProgress(); saveQuestion('main')"> Continue</a>
+            <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>
         </div>
     </div>
 </div>
