Start saving task answers

--- a/SinglePage/templates/base.html
+++ b/SinglePage/templates/base.html
@@ -92,6 +92,9 @@
 </script>
 <script src="{% static 'js/script.js' %}"></script>
 
+<!-- Scripts to save task answers -->
+{% include "scripts.html" %}
+
 </body>
 
 </html>
