--- a/SinglePage/templates/cards/task_pre.html
+++ b/SinglePage/templates/cards/task_pre.html
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>
+            <a class="btn btn-next" onclick=" saveTask('pre', 'first')"> Continue</a>
         </div>
     </div>
 </div>
